@@ -50,14 +50,4 @@
     <view visible="0" objName="&lt;undefined&gt;" xview="0" yview="0" wview="1024" hview="768" xport="0" yport="0" wport="1024" hport="768" hborder="32" vborder="32" hspeed="-1" vspeed="-1"/>
     <view visible="0" objName="&lt;undefined&gt;" xview="0" yview="0" wview="1024" hview="768" xport="0" yport="0" wport="1024" hport="768" hborder="32" vborder="32" hspeed="-1" vspeed="-1"/>
   </views>
-  <instances/>
-  <tiles/>
-  <PhysicsWorld>0</PhysicsWorld>
-  <PhysicsWorldTop>0</PhysicsWorldTop>
-  <PhysicsWorldLeft>0</PhysicsWorldLeft>
-  <PhysicsWorldRight>1024</PhysicsWorldRight>
-  <PhysicsWorldBottom>768</PhysicsWorldBottom>
-  <PhysicsWorldGravityX>0</PhysicsWorldGravityX>
-  <PhysicsWorldGravityY>10</PhysicsWorldGravityY>
-  <PhysicsWorldPixToMeters>0.100000001490116</PhysicsWorldPixToMeters>
-</room>
+  <instances>
