@@ -4,6 +4,40 @@ from PIL import Image
 from pathlib import Path
 with open('scratchproject/project.json') as whatsinhere:
     gamecode = json.load(whatsinhere)
+def make_new_event():
+    global neweventbaby
+    neweventbaby = "<event eventtype=\""+str(eventtype)+"\" enumb=\""+str(enumb)+"\">\n      <action>\n        <libid>1</libid>\n        <id>603</id>\n        <kind>7</kind>\n        <userelative>0</userelative>\n        <isquestion>0</isquestion>\n        <useapplyto>-1</useapplyto>\n        <exetype>2</exetype>\n        <functionname></functionname>\n        <codestring></codestring>\n        <whoName>self</whoName>\n        <relative>0</relative>\n        <isnot>0</isnot>\n        <arguments>\n          <argument>\n            <kind>1</kind>\n            <string>"
+def add_to_script():
+    global writingin
+    if writingin == "whenGreenFlag":
+        global greenflag
+        if greenflag == "":
+            global eventtype
+            global enumb
+            eventtype = 7
+            enumb = 4
+            make_new_event()
+            greenflag = neweventbaby
+        if greenflag != "":
+            global codetoadd
+            greenflag += codetoadd
+def convert_block():
+    global codetoadd
+    codetoadd = ""
+    #gotta figure out how to do this block lmao
+    #if currentblock == 'doRepeat':
+    #    repeatfor = int(AllScripts[codeparse+1])
+    if currentblock == 'whenGreenFlag':
+        global writingin
+        writingin = "whenGreenFlag"
+    if currentblock == 'gotoXy':
+        global codeparse
+        daX = AllScripts[codeparse+1]
+        daX = int(daX)+480
+        daY = AllScripts[codeparse+2]
+        daY = int(daY)+352
+        codetoadd = "x = "+str(daX)+";\ny = "+str(daY)+";\n"
+        add_to_script()
 if ("objName" in gamecode):
     spritemetadata = "";
     soundmetadata = "";
@@ -26,13 +60,13 @@ if ("objName" in gamecode):
         AllCostumes = gamecode['costumes']
         costumeamount = len(AllCostumes)
         subimage = 0
-        thecostume = AllCostumes[i]
+        thecostume = AllCostumes[0]
         rotX = thecostume['rotationCenterX']
         rotY = thecostume['rotationCenterY']
-        costumeID = thecostume['baseLayerID']
-        img = PIL.Image.open("scratchproject/"+str(costumeID)+".png") 
-        wid, hgt = img.size
-        img.close()
+        costumeID = (thecostume['baseLayerID'])
+        imagez = PIL.Image.open("scratchproject/"+str(costumeID)+".png") 
+        wid, hgt = imagez.size
+        imagez.close()
         spritemetadata += "    <sprite>sprites\\spr_stage</sprite>\n";
         with open('FinishedGame.gmx/sprites/spr_stage.sprite.gmx','x') as f:
             f.write("<!--This Document is generated by GameMaker, if you edit it by hand then you do so at your own risk!-->\n<sprite>\n  <type>0</type>\n  <xorig>"+str(rotX)+"</xorig>\n  <yorigin>"+str(rotY)+"</yorigin>\n  <colkind>1</colkind>\n  <coltolerance>0</coltolerance>\n  <sepmasks>0</sepmasks>\n  <bboxmode>0</bboxmode>\n  <bbox_left>0</bbox_left>\n  <bbox_right>"+str(wid-1)+"</bbox_right>\n  <bbox_top>0</bbox_top>\n  <bbox_bottom>"+str(hgt-1)+"</bbox_bottom>\n  <HTile>0</HTile>\n  <VTile>0</VTile>\n  <TextureGroups>\n    <TextureGroup0>0</TextureGroup0>\n  </TextureGroups>\n  <For3D>0</For3D>\n  <width>960</width>\n  <height>720</height>\n  <frames>\n")
@@ -57,12 +91,16 @@ if ("objName" in gamecode):
             varcode = varname+" = "+str(varvalue)+";\n"
             with open('FinishedGame.gmx/scripts/establishVariables.gml','a') as f:
                 f.write(varcode)
-        # Other Sprite Time!
+    # Other Sprite Time!
+    allobjmetadata = ""
+    if ("children" in gamecode):
         AllObjects = gamecode['children']
         ObjectAmount = len(AllObjects)
         for i in range(ObjectAmount):
             if 'target' not in AllObjects[i]:#this wont trip up by having a sprite or sound in Scratch be named "target" will it?
                 CurrentObject = AllObjects[i]
+                ObjectX = CurrentObject['scratchX']
+                ObjectY = CurrentObject['scratchY']
                 # Import Sounds
                 if ("sounds" in CurrentObject):
                     print("Importing '"+str(CurrentObject['objName'])+"' sounds...")
@@ -110,26 +148,44 @@ if ("objName" in gamecode):
                                 f.write("  </frames>\n</sprite>")
                 # Start to make Object XML
                 objectmetadata = "<!--This Document is generated by GameMaker, if you edit it by hand then you do so at your own risk!-->\n<object>\n  <spriteName>spr_"+str(CurrentObject['objName'])+"</spriteName>\n  <solid>0</solid>\n  <visible>-1</visible>\n  <depth>0</depth>\n  <persistent>0</persistent>\n  <parentName>&lt;undefined&gt;</parentName>\n  <maskName>&lt;undefined&gt;</maskName>\n  <events>\n    "
-                # Game Code, Baby (this stuff doesn't work right now D:)
-                #greenflag = ""
-                #if ("scripts" in CurrentObject):
-                #    CurrentScripts = CurrentObject['scripts']
-                #    ScriptAmount = len(CurrentScripts)
-                #    for i in range (ScriptAmount):
-                #        if ("whenGreenFlag" in CurrentScripts[i]):
-                #            if (greenflag == ""):
-                #                greenflag = "<event eventtype=\"0\" enumb=\"0\">\n      <action>\n        <libid>1</libid>\n        <id>603</id>\n        <kind>7</kind>\n        <userelative>0</userelative>\n        <isquestion>0</isquestion>\n        <useapplyto>-1</useapplyto>\n        <exetype>2</exetype>\n        <functionname></functionname>\n        <codestring></codestring>\n        <whoName>self</whoName>\n        <relative>0</relative>\n        <isnot>0</isnot>\n        <arguments>\n          <argument>\n            <kind>1</kind>\n            <string>"
-                #            whatodo = CurrentScripts["whenGreenFlag"]
-                #            whatodolength = len(whatodo)
-                #            for e in range (whatodolength):
-                #                if ("gotoX:y:" in whatodo[i]):
-                #                    greenflag += ""
-                #Write Object Metadata
+                # Object Code, Baby
+                global greenflag
+                greenflag = ""
+                if ("scripts" in CurrentObject):
+                    print("Converting '"+str(CurrentObject['objName'])+"' code...")
+                    AllScripts = json.dumps(CurrentObject['scripts'])
+                    badchar = "[],:\""
+                    for character in badchar:
+                        AllScripts = AllScripts.replace(character,"")
+                    AllScripts = AllScripts.split()
+                    global codeparse
+                    global codetoadd
+                    codeparse = 0
+                    global eventtype
+                    global enumb
+                    eventtype = 0
+                    enumb = 0
+                    global writingin
+                    writingin = ""
+                    ScriptAmount = len(AllScripts)
+                    for i in range (ScriptAmount):
+                        currentblock = AllScripts[codeparse]
+                        convert_block()
+                        codeparse += 1
+                    if greenflag != "":
+                        greenflag += "</string>\n          </argument>\n        </arguments>\n      </action>\n    </event>\n"
+                #Write Object Metadata & Write Object Into Room Metadata
+                objectmetadata += ""+str(greenflag)+"  </events>\n  <PhysicsObject>0</PhysicsObject>\n  <PhysicsObjectSensor>0</PhysicsObjectSensor>\n  <PhysicsObjectShape>0</PhysicsObjectShape>\n  <PhysicsObjectDensity>0.5</PhysicsObjectDensity>\n  <PhysicsObjectRestitution>0.100000001490116</PhysicsObjectRestitution>\n  <PhysicsObjectGroup>0</PhysicsObjectGroup>\n  <PhysicsObjectLinearDamping>0.100000001490116</PhysicsObjectLinearDamping>\n  <PhysicsObjectAngularDamping>0.100000001490116</PhysicsObjectAngularDamping>\n  <PhysicsObjectFriction>0.200000002980232</PhysicsObjectFriction>\n  <PhysicsObjectAwake>-1</PhysicsObjectAwake>\n  <PhysicsObjectKinematic>0</PhysicsObjectKinematic>\n  <PhysicsShapePoints/>\n</object>"
+                allobjmetadata += "    <object>objects\obj_"+str(CurrentObject['objName'])+"</object>\n"
                 with open('FinishedGame.gmx/objects/obj_'+str(CurrentObject['objName'])+'.object.gmx','a') as f:
                     f.write(str(objectmetadata))
-        #Rewrite Main Game Metadata
+                with open('FinishedGame.gmx/rooms/rm_stage.room.gmx','a') as f:
+                    f.write('    <instance objName=\"obj_'+str(CurrentObject['objName'])+'\" x=\"'+str(ObjectX+480)+'\" y=\"'+str(ObjectY+352)+'\" name=\"inst_'+str(CurrentObject['objName'])+'\" locked=\"0\" code=\"\" scaleX=\"1\" scaleY=\"1\" colour=\"4294967295\" rotation=\"0\"/>\n')
+        #Rewrite Main Game and Room Metadata
         with open ('FinishedGame.gmx/FinishedGame.project.gmx','w') as f:
-            f.write("<!--This Document is generated by GameMaker, if you edit it by hand then you do so at your own risk!-->\n<assets>\n  <Configs name=\"configs\">\n    <Config>Configs\Default</Config>\n  </Configs>\n  <NewExtensions/>\n  <sounds name=\"sound\">\n"+str(soundmetadata)+"  </sounds>\n  <sprites name=\"sprites\">\n"+str(spritemetadata)+"  </sprites>\n  <backgrounds name=\"background\"/>\n  <paths name=\"paths\"/>\n  <scripts name=\"scripts\">\n    <script>scripts\establishVariables.gml</script>\n  </scripts>\n  <rooms name=\"rooms\">\n    <room>rooms\\rm_stage</room>\n  </rooms>\n  <help>\n    <rtf>help.rtf</rtf>\n  </help>\n  <TutorialState>\n    <IsTutorial>0</IsTutorial>\n    <TutorialName></TutorialName>\n    <TutorialPage>0</TutorialPage>\n  </TutorialState>\n</assets>")
+            f.write("<!--This Document is generated by GameMaker, if you edit it by hand then you do so at your own risk!-->\n<assets>\n  <Configs name=\"configs\">\n    <Config>Configs\Default</Config>\n  </Configs>\n  <NewExtensions/>\n  <sounds name=\"sound\">\n"+str(soundmetadata)+"  </sounds>\n  <sprites name=\"sprites\">\n"+str(spritemetadata)+"  </sprites>\n  <backgrounds name=\"background\"/>\n  <paths name=\"paths\"/>\n  <scripts name=\"scripts\">\n    <script>scripts\establishVariables.gml</script>\n  </scripts>\n  <objects name=\"objects\">\n"+str(allobjmetadata)+"  </objects>\n  <rooms name=\"rooms\">\n    <room>rooms\\rm_stage</room>\n  </rooms>\n  <help>\n    <rtf>help.rtf</rtf>\n  </help>\n  <TutorialState>\n    <IsTutorial>0</IsTutorial>\n    <TutorialName></TutorialName>\n    <TutorialPage>0</TutorialPage>\n  </TutorialState>\n</assets>")
+        with open('FinishedGame.gmx/rooms/rm_stage.room.gmx','a') as f:
+            f.write('  </instances>\n  <tiles/>\n  <PhysicsWorld>0</PhysicsWorld>\n  <PhysicsWorldTop>0</PhysicsWorldTop>\n  <PhysicsWorldLeft>0</PhysicsWorldLeft>\n  <PhysicsWorldRight>1024</PhysicsWorldRight>\n  <PhysicsWorldBottom>768</PhysicsWorldBottom>\n  <PhysicsWorldGravityX>0</PhysicsWorldGravityX>\n  <PhysicsWorldGravityY>10</PhysicsWorldGravityY>\n  <PhysicsWorldPixToMeters>0.100000001490116</PhysicsWorldPixToMeters>\n</room>')
         print("*DING* Done!")
 else:
     print("ERROR: This Scratch project doesn't have a Stage from what we can tell. Is it a valid .sb2 file?")
